#add_subdirectory(writechecker)
#add_subdirectory(readchecker)
#add_subdirectory(txmchecker)
#add_subdirectory(mcchecker)
#add_subdirectory(txpchecker)
#add_subdirectory(mainchecker)
#add_subdirectory(ptrchecker)
add_subdirectory(flushedchecker)
add_subdirectory(logchecker)
add_subdirectory(expchecker)
add_subdirectory(pairchecker)
